Fixed some BC break problem for sf 1.3

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -14,7 +14,7 @@
             {% endif %}
         {% endif %}
         {% set options = choices %}
-        {{ block('widget_choice_options') }}
+        {{ block('choice_widget_options') }}
     </select>
 {% endspaceless %}
 {% endblock forcetk_picklist_widget %}
